[WIP][Test] JDK17 Migration: Fix unit tests by migrating from PowerMock to latest Mockito
- PowerMock seems to have some issues with JDK17, so replacing PowerMock with Mockito's integrated mocking functionality